--- a/Ben-Ora_Kelden_Project5/Ben-Ora_Kelden_Project5.ipynb
+++ b/Ben-Ora_Kelden_Project5/Ben-Ora_Kelden_Project5.ipynb
@@ -591,6 +591,263 @@
     "\n",
     "In this problem, we finally begin to take viscosity into consideration when calculating pressure distributions and lift. The source panel method will be adapted for this case. We will be calculating the boundary layer displacement thickness iteratively to come upon an airfoil surface that acts equivalently to that which is acted upon by viscous flow."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SystemExit",
+     "evalue": "\n\n********************************************************************\nPYXFOIL ERROR: Geometry input file does not exist/in wrong location\n(Data/23012/23012.dat)\n********************************************************************\n\n",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m \n\n********************************************************************\nPYXFOIL ERROR: Geometry input file does not exist/in wrong location\n(Data/23012/23012.dat)\n********************************************************************\n\n\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Project 5\n",
+    "import math\n",
+    "import mses\n",
+    "import pyxfoil\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plot\n",
+    "\n",
+    "def MsesSplit(x, y):\n",
+    "\t\"\"\"Split MSES format into upper and lower surfaces.  Find split from\n",
+    "\tx geometry coordinates, split y at this index.  Return y split into\n",
+    "\ttwo sets: upper and lower\n",
+    "\tx --> MSES x coordinates\n",
+    "\ty --> Any other MSES parameter (e.g. x/c, z/c, Cp, etc)\n",
+    "\t\"\"\"\n",
+    "\t#Get index of leading edge on upper surface\n",
+    "\tiLE = FindLE(x)\n",
+    "\t#Split upper and lower surface, reverse order upper surface\n",
+    "\tup = y[iLE::-1]\n",
+    "\tlo = y[iLE+1:]\n",
+    "\treturn up, lo\n",
+    "\n",
+    "def MsesInterp(xout, xmses, ymses):\n",
+    "\t\"\"\"Split MSES format data into upper and lower surfaces.  Then\n",
+    "\tinterpolate data to match given xout vector.\n",
+    "\txout  --> desired x locations\n",
+    "\txmses --> original x MSES data\n",
+    "\tymses --> original x/c, z/c, Cp, etc MSES data\n",
+    "\t\"\"\"\n",
+    "\txup_mses, xlo_mses = MsesSplit(xmses, xmses)\n",
+    "\tyup_mses, ylo_mses = MsesSplit(xmses, ymses)\n",
+    "\tyup = np.interp(xout, xup_mses, yup_mses)\n",
+    "\tylo = np.interp(xout, xlo_mses, ylo_mses)\n",
+    "\treturn yup, ylo\n",
+    "\n",
+    "def FindLE(X):\n",
+    "\t\"\"\"Return index dividing upper and lower surface given MSES format\n",
+    "\tgeometry.\n",
+    "\tMSES files start at rear of airfoil, and x diminishes until the leading\n",
+    "\tedge, where it then increases back to the trailing edge.  This code finds\n",
+    "\tthe transition where x goes from decreasing to increasing.\n",
+    "\tX --> MSES x coordinates\n",
+    "\t\"\"\"\n",
+    "\txold = X[0]\n",
+    "\tfor i, x in enumerate(X[1:]):\n",
+    "\t\tif x >= xold:\n",
+    "\t\t\t#If current x greater/equal to prev x, x is increasing (lower surf)\n",
+    "\t\t\treturn i #return index of Leading Edge (divides upper/lower surfs)\n",
+    "\t\telse:\n",
+    "\t\t\t#If current x less than prev x, x still diminishing (upper surf)\n",
+    "\t\t\txold = x\n",
+    "\n",
+    "#Bernoulli's Relation\n",
+    "def Cp2V(Cp,Vinf):\n",
+    "\t\"\"\"Return velocity magnitude computed from pressure coefficient using Bernoulli's principle\n",
+    "\t\"\"\"\n",
+    "\treturn np.sqrt(1-Cp)*Vinf\n",
+    "\n",
+    "def MomThickness(x, u, Vinf, mu=1.79E-5, rho = 1.225):\n",
+    "\t\"\"\"Compute momentum thickness at a given x-location along chord from\n",
+    "\tequation derived by applying Blausius solution for flat plat to\n",
+    "\tvon Karmen integral relation for boundary layer.\n",
+    "\tx --> coordinates along chord\n",
+    "\tu --> surface velocity distribution as f(x) (from pot. flow soln)\n",
+    "\t\"\"\"\n",
+    "\t#Compute momentum thickness at each X Location (via von Karman relation)\n",
+    "\n",
+    "\tn=len(x)\n",
+    "\tc=max(x)-min(x)\n",
+    "\tmom_thk = np.zeros(n)\n",
+    "\t# Loop throuh each x-Location\n",
+    "\tfor i in range(n):\n",
+    "\t\t#integral portion is of surface velocity from LE up to current c\n",
+    "\t\tintegral=np.trapz(u[0:i] ** 8.210, x[0:i]*c)\n",
+    "\t\t#momentum thickness\n",
+    "\t\tmom_thk[i]=np.sqrt((0.440 * mu)/(rho * u[i] ** 9.210)*integral)\n",
+    "\treturn mom_thk\n",
+    "\n",
+    "def FixTE(x,z,tol=1):\n",
+    "\t\"\"\"The displacement thickness due to the boundary layer of the\n",
+    "\ttrailing edge is so large that the TE becomes too blunt to solve correctly\n",
+    "\tin a potential flow solver. This function modifies an airfoil geometry\n",
+    "\tso that the trailing edge is marginally sharper.\n",
+    "\tx,z --> coordinates for ONE side of an airfoil, upper OR Lower\n",
+    "\ttol --> surface slope tolerance\n",
+    "\t\"\"\"\n",
+    "\tc=max(x)-min(x) #chord\n",
+    "\n",
+    "\t#USE DATAFRAME FOR CONVENIENCE\n",
+    "\tdf = pd.DataFrame({'x':x,'z':z})\n",
+    "\n",
+    "\t#Find indec pf 90% chord\n",
+    "\tind=df.loc[df.x >= c*0.9].index[0]\n",
+    "\n",
+    "\t#Make surface from Ind of 90% to a straight line (wedge)\n",
+    "\t#number of points back to calc slope\n",
+    "\tback=5\n",
+    "\t#airfoil slope\n",
+    "\tm=(df.loc[ind,'z'] - df.loc[ind-back,'z'])/(df.loc[ind,'x'] - df.loc[ind-back, 'x'])\n",
+    "\n",
+    "\tdf.loc[ind:,'z'] = (df.loc[ind:, 'x'] - df.loc[ind,'x']) * m + df.loc[ind,'z']\n",
+    "\treturn np.array(df['z'])\n",
+    "\n",
+    "\"\"\"LAST FUNCTION\n",
+    "\tThe following function will do just that in the following steps:\n",
+    "\t1. Compute surface velocity from surface pressure using Bernoulli\n",
+    "\t2. Compute momentum thickness from surface velocity using Blausius/von Karman\n",
+    "\t3. Compute displacement thickness from momentum thickness using flat plate solution\n",
+    "\t4. Add displacement thickness to original geometry\n",
+    "\"\"\"\n",
+    "\n",
+    "def ViscousCalcs(df, Vinf, mu, rho):\n",
+    "\t\"\"\"For a SINGLE surface (upper or lower):\n",
+    "\tFrom an inviscid panel method solution,\n",
+    "\tcompute momentum thickness/displacement thickness from Blausius flat plate/\n",
+    "\tvon Karman integral relation.\n",
+    "\tAdd disp. thickness to original geometry to produce \"displaced\" geometry.\n",
+    "\tCompute wall shear stress from momentum thickness.\n",
+    "\t(Viscous portion of VIvI)\n",
+    "\tdf --> dataframe containing parameters for SINGLE surface\n",
+    "\t\"\"\"\n",
+    "\n",
+    "\t#Compute displacement thickness\n",
+    "\tdf['U'] = Cp2V(df.Cp, Vinf)\n",
+    "\n",
+    "\t#Compute momentum thickness from Blausius/von Karman\n",
+    "\tdf['theta'] = MomThickness(df.x, df.U, Vinf, mu, rho)\n",
+    "\n",
+    "\t#Blausius shape factor\n",
+    "\tH = 2.605 \n",
+    "\n",
+    "\t#Compute displacement thickness\n",
+    "\tdf['delta_star'] = H * df.theta\n",
+    "\n",
+    "\t#Adding displacement thickness to airfoil geometry\n",
+    "\tsurfactor = -1 if max(abs(df.z)) > max(df.z) else 1\n",
+    "\tdf['zdisp'] = df['z'] + df['delta_star'] * surfactor\n",
+    "\n",
+    "\t#Sharpen\n",
+    "\tdf['zdisp'] = FixTE(np.array(df['x']), np.array(df['zdisp']))\n",
+    "\treturn df\n",
+    "\n",
+    "def VIvI(foilfile, alfa, niter=0, Vinf=1, mu=1.79E-5, rho=1.225):\n",
+    "\t\"\"\"SINGLE ITERATION of Viscous/Inviscid Interaction:\n",
+    "\tRun invicid panel method simulation with provided geometry,\n",
+    "\tcompute displacement thickness of BL from surface pressure distribution,\n",
+    "\treturn \"displaced\" geometry, which can be used for another VIvI iteration\n",
+    "\tfoilfile --> path to airfoil geometry file\n",
+    "\talfa --> Single AoA at which to perform VIvI\n",
+    "\tniter --> number for current iteration of VIvI\n",
+    "\tVinf, mu, rho --> freestream conditions\n",
+    "\t\"\"\"\n",
+    "\n",
+    "\t#GET INVISCID PANEL METHOD SURFACE PRESSURE SOLUTION\n",
+    "\t#name of current solution depends on VIvI iteration number\n",
+    "\tnum = '' if niter == 0 else '_{}'.format(niter)\n",
+    "\tgeomfile = 'Data/{}/{}{}.dat'.format(foilfile, foilfile, num)\n",
+    "\t#Run inviscid panel method\n",
+    "\tinvis = pyxfoil.GetPolar(geomfile, False, [alfa], Re=0,\n",
+    "\t\t\t\t\t\t\tSaveCP=True)\n",
+    "\t#Read panel method pressure distribution\n",
+    "\tpressfile = 'Data/{}{}/{}{}_surfCP_Re0.00e+00a{:1.1f}.dat'.format(\n",
+    "\t\t\t\t\t\t\t\t\t\t\tfoilfile, num, foilfile, num, alfa)\n",
+    "\txCp = pyxfoil.ReadXfoilSurfPress(pressfile)\n",
+    "\tprint(xCp.head())\n",
+    "\t#check of XFOIL solution failed\n",
+    "\tif xCp.isnull().values.any():\n",
+    "\t    sys.exit('XFOIL solution failed for VIvI iteration: {}'.format(niter))\n",
+    "\n",
+    "\t#SPLIT MSES DATA INTO UPPER/LOWER SURFACES\n",
+    "\t#Read current airfoil coordinates\n",
+    "\tdfmses = pyxfoil.ReadXfoilAirfoilGeom(geomfile)\n",
+    "\t#Compute chord length\n",
+    "\tc = max(dfmses.x) - min(dfmses.x)\n",
+    "\t#interpolate sufaces to this x\n",
+    "\txnew = np.linspace(0, c, 495)\n",
+    "\t#store info for each surface in dictionary\n",
+    "\tdfs = {'up' : pd.DataFrame(), 'lo' : pd.DataFrame()}\n",
+    "\t#both sides have same x\n",
+    "\tdfs['up']['x'], dfs['lo']['x'] = xnew, xnew\n",
+    "\t#split surfaces\n",
+    "\tdfs['up']['z'], dfs['lo']['z'] = mses.MsesInterp(xnew, dfmses.x, dfmses.z)\n",
+    "\t#split surface pressure\n",
+    "\tdfs['up']['Cp'], dfs['lo']['Cp'] = mses.MsesInterp(xnew, xCp.x, xCp.Cp)\n",
+    "\t #save original geometry for plotting later\n",
+    "\tdfog = dfs.copy()\n",
+    "\n",
+    "\t#VIVI COMPUTATIONS FOR EACH SURFACE\n",
+    "\tfor side in ['up', 'lo']:\n",
+    "\t\t#compute displacement thickness from pressure distribution, add to geom\n",
+    "\t\tdfs[side] = ViscousCalcs(dfs[side], Vinf, mu, rho)\n",
+    "\n",
+    "\t#MERGE AND SAVE DISPLACED GEOMETRY\n",
+    "\t#Put displaced geometry into MSES format\n",
+    "\tdfdisp = pd.DataFrame()\n",
+    "\tdfdisp['x'], dfdisp['z'] = mses.MsesMerge(dfs['lo']['x'], dfs['up']['x'],\n",
+    "\t\t\t\t\t\t\t\t\t\t\t\tdfs['lo']['zdisp'], dfs['up']['zdisp'])\n",
+    "\t#Save displaced geometry in XFOIL format\n",
+    "\tgeomfile = 'Data/{}/{}_{}.dat'.format(foilfile, foilfile, niter+1)\n",
+    "\tpyxfoil.WriteXfoilFile(geomfile, dfdisp.x, dfdisp.z)\n",
+    "\n",
+    "\t#RETURN UPPER/LOWER SURFACE MOMENTUM THICKNESS AND SURFACE VELOCITY DISTS.\n",
+    "\treturn dfs['up']['theta'], dfs['up']['U'], dfs['lo']['theta'], dfs['lo']['U']\n",
+    "\n",
+    "foil='23012'\n",
+    "naca = True\n",
+    "alpha = 0\n",
+    "currentiter = 0\n",
+    "pyxfoil.GetPolar(foil, naca, alpha, Re = 0)\n",
+    "\n",
+    "Vinf = 1\n",
+    "mu=1.79E-5\n",
+    "rho=1.225\n",
+    "naca= True\n",
+    "\n",
+    "theta0_up, ue0_up, theta0_lo, ue0_lo = VIvI(foil, alpha, currentiter, Vinf, mu, rho)\n",
+    "\n",
+    "path = 'Data/naca23012/naca23012.dat'\n",
+    "dfmses=pyxfoil.ReadXfoilAirfoilGeom(path)\n",
+    "\n",
+    "plot.figure(figsize=(12,4))\n",
+    "plot.title('Geometry of $0^{th}$ Iter')\n",
+    "plot.xlabel('x')\n",
+    "plot.ylabel('y')\n",
+    "plot.plot(dfmses.x, dfmses.z)\n",
+    "plot.axis('equal')\n",
+    "plot.show()\n",
+    "\n",
+    "#x-vector is same length as VIvI data, bounded by geometry loaded from file\n",
+    "x = np.linspace(min(dfmses.x), max(dfmses.x), len(theta0_up))\n",
+    "#plot momentum thickness\n",
+    "plot.figure()\n",
+    "plot.title('Momentum Thickness for $0^{th}$ Iter')\n",
+    "plot.xlabel('x')\n",
+    "plot.ylabel('$\\\\theta$')\n",
+    "plot.plot(x, theta0_up, label='up')\n",
+    "plot.plot(x, theta0_lo, label='lo')\n",
+    "plot.legend()\n",
+    "plot.show()\n"
+   ]
   }
  ],
  "metadata": {
