--- a/Ben-Ora_Kelden_Project5/Ben-Ora_Kelden_Project5.ipynb
+++ b/Ben-Ora_Kelden_Project5/Ben-Ora_Kelden_Project5.ipynb
@@ -867,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -875,9 +875,9 @@
      "output_type": "stream",
      "text": [
       "      Foil  Reynold's Number (in Xfoil)  Calculated C_l  Calculated C_d\n",
-      "0  23012_3                      0.00000          0.0558             NaN\n",
-      "1    23012                      0.00000          0.1377         0.00000\n",
-      "2    23012                  68435.75419          0.2495         0.01857\n"
+      "0  23012_3                      0.00000          0.0558        0.000207\n",
+      "1    23012                      0.00000          0.1377        0.000000\n",
+      "2    23012                  68435.75419          0.2495        0.018570\n"
      ]
     }
    ],
@@ -931,7 +931,7 @@
     "After running xfoil with viscid and inviscid effects on the 23012 airfoil and comparing those results with the coefficients obtained from the 23012_3 calculations, we can see that the method we have used yields much smaller coefficients of lift and drag than those acquired from xfoil. Comparing the coefficients of lift and drag for our Vivi solution to the viscous xfoil solution, our results are orders of magnitude off from the xfoil results.\n",
     "\n",
     "### 2.3 Assumptions and Limitations\n",
-    "Our Vivi tool has several downsides that result in these inaccurate numbers. First, the tool uses Xfoil to generate a surface distribution of pressure assuming inviscid flow. This pressure distribution changes drastically when viscid effects are taken into account in xfoil. The Vivi tool also uses the flat-plate approximation when calculating the momentum thickness. While the flat-plate approximation yields relatively accurate results for the coefficient of"
+    "Our Vivi tool has several downsides that result in these inaccurate numbers. First, the tool uses Xfoil to generate a surface distribution of pressure assuming inviscid flow. This pressure distribution changes drastically when viscid effects are taken into account in xfoil. The Vivi tool also uses the flat-plate approximation when calculating the momentum thickness. While the flat-plate approximation yields relatively accurate results for the coefficient of drag on a symmetric airfoil, a cambered airfoil like 23012 likely has some turbulent flow separation near the trailing edge which would lead to very different results for the drag."
    ]
   },
   {
@@ -943,7 +943,7 @@
     "\n",
     "The first problem demonstrated the effects of a flap being deployed behind a main airfoil. The purpose of the flap is to increase the total lift of the main airfoil by increasing the camber, angle of attack, and surface area. Our calculations matched our expectations with each additional 10 degrees of flap deployment increasing the coefficient of lift drastically from 1.6 to 2.4. This problem also demonstrated that our vortex panel method can be applied to multiple airfoil elements in the same flow.\n",
     "\n",
-    "The second problem has taken viscous effects into account to help us solve for the drag over an airfoil. The Viscous/Inviscid Interaction tool was used to iteratively generate a changing displaced surface geometry by calculating the momentum thickness and applying the Blasius solution for a flat plate. We then found the drag over our airfoil by calculating the shear force at each x coordinate. This shear was then applied to the integral equations for calculating the coefficient of friction drag. Our results for drag are very dissimilar from xfoil. This is likely due to the many assumptions and simplifications that were made during the process."
+    "The second problem has taken viscous effects into account to help us solve for the drag over an airfoil. The Viscous/Inviscid Interaction tool was used to iteratively generate a changing displaced surface geometry by calculating the momentum thickness and applying the Blasius solution for a flat plate. We then found the drag over our airfoil by calculating the shear force at each x coordinate. This shear was then applied to the integral equations for calculating the coefficient of friction drag. Our results for drag are very dissimilar from xfoil. This is likely due to the many assumptions and simplifications that were made during the process such as combining viscous effects and the results of inviscid flow simulations. Hopefully the next project tasks will refine the process for calculating viscous forces properly. "
    ]
   }
  ],
